--- a/SmartMarathon.IonicApp/www/templates/contact.html
+++ b/SmartMarathon.IonicApp/www/templates/contact.html
@@ -1,3 +1,24 @@
-<ion-view title="Contact" id="contact" class="bgcolor-green">
-    <ion-content padding="true" style="background: url(img/bg-box.png) no-repeat center;background-size:cover;" class="has-header"></ion-content>
+<ion-view title="{{$parent.strings.Contact_Title}}" class="bgcolor-green">
+    <ion-content padding="true" class="has-header">
+        <div style="text-align: center;">
+            <br />
+            <p style="color: white">{{$parent.strings.Contact_P1}}</p>
+            <br />
+            <p style="color: white">{{$parent.strings.Contact_P2}}</p>
+            <br />
+            <br />
+            <address>
+                <p style="color: white">
+                    Luis Fernandez Jimenez
+                    <br />
+                    San Jose, Costa Rica
+                    <br />
+                    <abbr title="Email">
+                        <a style="color: yellow" href="mailto:lafj14@gmail.com?subject=[Smart Marathon]">lafj14@gmail.com</a>
+                    </abbr>
+                </p>
+                <p></p>
+            </address>
+        </div>
+    </ion-content>
 </ion-view>
