Remove background image

--- a/SmartMarathon.IonicApp/www/templates/gSSI.html
+++ b/SmartMarathon.IonicApp/www/templates/gSSI.html
@@ -1,5 +1,5 @@
 <ion-view title="{{$parent.strings.GSSI_Title}}" class="bgcolor-green">
-    <ion-content padding="true" style="background: url(img/bg-box.png) no-repeat center;background-size:cover;" class="has-header">
+    <ion-content padding="true" class="has-header">
         <form class="list nutrition-calculator">
             <ion-item class="item-divider">{{$parent.strings.GSSI_Parameters}}</ion-item>
 
