--- a/SmartMarathon.IonicApp/www/templates/smartMarathon.html
+++ b/SmartMarathon.IonicApp/www/templates/smartMarathon.html
@@ -1,5 +1,8 @@
 <ion-view title="{{$parent.strings.SM_Title}}" id="smartMarathon" class="bgcolor-green">
-    <ion-content padding="true" class="has-header">
+    <div class="loader-box" ng-show="$parent.loading">
+        <img class="loader" src="img/logo.gif" />
+    </div>
+    <ion-content padding="true" class="has-header" ng-hide="$parent.loading">
         <p class="description-text">{{$parent.strings.SM_Instructions}}</p>
         <div class="list" style="color: #00582A;">
 
