Changed contact email

--- a/SmartMarathon.IonicApp/www/templates/contact.html
+++ b/SmartMarathon.IonicApp/www/templates/contact.html
@@ -14,7 +14,7 @@
                     San Jose, Costa Rica
                     <br />
                     <abbr title="Email">
-                        <a style="color: yellow" href="mailto:lafj14@gmail.com?subject=[Smart Marathon]">lafj14@gmail.com</a>
+                        <a style="color: yellow" href="mailto:lfernandez@smartmarathon.net?subject=[Smart Marathon]">lfernandez@smartmarathon.net</a>
                     </abbr>
                 </p>
                 <p></p>
