--- a/SmartMarathon.IonicApp/www/templates/gSSI.html
+++ b/SmartMarathon.IonicApp/www/templates/gSSI.html
@@ -2,94 +2,108 @@
     <div class="loader-box" ng-show="$parent.loading">
         <img class="loader" src="img/logo.gif" />
     </div>
-    <ion-content padding="true" class="has-header" ng-hide="$parent.loading">
-        <form class="list nutrition-calculator">
-            <ion-item class="item-divider color-orange">{{$parent.strings.GSSI_Parameters}}</ion-item>
+    <ion-nav-buttons side="right">
+        <button class="button icon ion-printer" ng-click="print()"></button>
+    </ion-nav-buttons>
+    <!--<link href="css/print.css" rel="stylesheet">-->
 
-            <label class="item item-select">
-                <span class="input-label">{{$parent.strings.GSSI_Gender}}</span>
-                <select ng-model="model.GenderSelected" ng-options="y.Text for (x, y) in data.Genders" ng-change="calculate()">
-                    <option value="" disabled>{{$parent.strings.GSSI_Select}}</option>
-                </select>
-            </label>
+    <ion-content padding="true" class="has-header" ng-hide="$parent.loading" id="gssiCalculatorView">
+        <div class="banner print">
+            <img src="img/print-banner.png" style="width: 90%">
+        </div>
 
-            <div class="row">
-                <label class="col-75 item item-input item-floating-label">
-	                <span class="input-label">{{$parent.strings.GSSI_Age}}</span>
-                    <input type="number" placeholder="{{$parent.strings.GSSI_Age}}" min="1" max="99" ng-model="model.Age" ng-change="calculate()" inputmode="numeric" pattern="[0-9]*" ng-focus="checkAgeZeroValue()" ng-model-options="{updateOn: 'default blur', debounce: {default: 1000, blur: 0} }">
-            	</label>
-                <label class="col-25 input-label-desc">{{$parent.strings.GSSI_Years}}</label>
-            </div>
-            <div class="row">
-                <label class="col-75 item item-input item-floating-label">
-                	<span class="input-label">{{$parent.strings.GSSI_Height}}</span>
-                    <input type="number" min="50" max="220" placeholder="{{$parent.strings.GSSI_Height}}" class="input-label-number" ng-model="model.Height" ng-change="calculate()" inputmode="numeric" pattern="[0-9]*" ng-focus="checkHeightZeroValue()" ng-model-options="{updateOn: 'default blur', debounce: {default: 1000, blur: 0} }">
+        <div class="wrapper-nutrition-calculator">
+            <form class="list nutrition-calculator">
+                <ion-item class="item-divider color-orange">{{$parent.strings.GSSI_Parameters}}</ion-item>
+
+                <label class="item item-select">
+                    <span class="input-label">{{$parent.strings.GSSI_Gender}}</span>
+                    <label class="select-label-print">{{model.GenderSelected.Text}}</label>
+                    <select ng-model="model.GenderSelected" ng-options="y.Text for (x, y) in data.Genders" ng-change="calculate()">
+                        <option value="" disabled>{{$parent.strings.GSSI_Select}}</option>
+                    </select>
                 </label>
-                <label class="col-25 input-label-desc">{{$parent.strings.GSSI_Cms}}</label>
-            </div>
-            <div class="row">
-                <label class="col-75 item item-input item-floating-label">
-                	<span class="input-label">{{$parent.strings.GSSI_Weight}}</span>
-                    <input type="number" min="50" max="500" placeholder="{{$parent.strings.GSSI_Weight}}" class="input-label-number" ng-model="model.Weight" ng-change="calculate()" inputmode="numeric" pattern="[0-9]*" ng-focus="checkWeightZeroValue()" ng-model-options="{updateOn: 'default blur', debounce: {default: 1000, blur: 0} }">
-                </label>
-                <label class="col-25 input-label-desc" ng-show="data.IsMetric">{{$parent.strings.GSSI_Kgs}}</label>
-                <label class="col-25 input-label-desc" ng-hide="data.IsMetric">{{$parent.strings.GSSI_Pounds}}</label>
-            </div>
-            <div class="row">
-                <label class="col-75 item item-input item-floating-label">
-                	<span class="input-label">{{$parent.strings.GSSI_TimeSpent}}</span>
-                    <input type="number" min="1" max="600" placeholder="{{$parent.strings.GSSI_TimeSpent}}" class="input-label-number" ng-model="model.TimeSpent" ng-change="calculate()" inputmode="numeric" pattern="[0-9]*" ng-focus="checkTimeSpentZeroValue()" ng-model-options="{updateOn: 'default blur', debounce: {default: 1000, blur: 0} }">
-                </label>
-                <label class="col-25 input-label-desc">{{$parent.strings.GSSI_Minutes}}</label>
-            </div>
-            <div class="row">
-                <label class="col-75 item item-input item-floating-label">
-                    <span class="input-label">{{$parent.strings.GSSI_AvgPaceRun}}</span>
-                    <input type="text" class="hidden" placeholder="0:00" ng-model="model.AvgPaceValue">
-                    <label class="input-fake input-label-number" ion-datetime-picker time ng-model="model.AvgPaceValue" ng-change="avgPaceValueChanged(model.AvgPaceValue)" style="padding-right: 20px;">
-                        {{model.AvgPaceValue| date: "H:mm"}}
+
+                <div class="row">
+                    <label class="col-75 item item-input item-floating-label">
+                        <span class="input-label">{{$parent.strings.GSSI_Age}}</span>
+                        <label class="input-floating-label-print">{{model.Age}}</label>
+                        <input type="number" placeholder="{{$parent.strings.GSSI_Age}}" min="1" max="99" ng-model="model.Age" ng-change="calculate()" inputmode="numeric" pattern="[0-9]*" ng-focus="checkAgeZeroValue()" ng-model-options="{updateOn: 'default blur', debounce: {default: 1000, blur: 0} }">
                     </label>
-                </label>                
-                <label class="col-25 input-label-desc" ng-show="data.IsMetric">{{$parent.strings.GSSI_MinKm}}</label>
-                <label class="col-25 input-label-desc" ng-hide="data.IsMetric">{{$parent.strings.GSSI_MinMile}}</label>
-            </div>
-            <label class="item item-select">
-                <span class="input-label">{{$parent.strings.GSSI_ActiveLevel}}</span>
-                <select ng-model="model.ActiveLevelSelected" ng-options="y.Text for (x, y) in data.ActiveLevels" ng-change="calculate()">
-                    <option value="" disabled>{{$parent.strings.GSSI_Select}}</option>
-                </select>
-            </label>
-        </form>
+                    <label class="col-25 input-label-desc">{{$parent.strings.GSSI_Years}}</label>
+                </div>
+                <div class="row">
+                    <label class="col-75 item item-input item-floating-label">
+                        <span class="input-label">{{$parent.strings.GSSI_Height}}</span>
+                        <label class="input-floating-label-print">{{model.Height}}</label>
+                        <input type="number" min="50" max="220" placeholder="{{$parent.strings.GSSI_Height}}" class="input-label-number" ng-model="model.Height" ng-change="calculate()" inputmode="numeric" pattern="[0-9]*" ng-focus="checkHeightZeroValue()" ng-model-options="{updateOn: 'default blur', debounce: {default: 1000, blur: 0} }">
+                    </label>
+                    <label class="col-25 input-label-desc">{{$parent.strings.GSSI_Cms}}</label>
+                </div>
+                <div class="row">
+                    <label class="col-75 item item-input item-floating-label">
+                        <span class="input-label">{{$parent.strings.GSSI_Weight}}</span>
+                        <label class="input-floating-label-print">{{model.Weight}}</label>
+                        <input type="number" min="50" max="500" placeholder="{{$parent.strings.GSSI_Weight}}" class="input-label-number" ng-model="model.Weight" ng-change="calculate()" inputmode="numeric" pattern="[0-9]*" ng-focus="checkWeightZeroValue()" ng-model-options="{updateOn: 'default blur', debounce: {default: 1000, blur: 0} }">
+                    </label>
+                    <label class="col-25 input-label-desc" ng-show="data.IsMetric">{{$parent.strings.GSSI_Kgs}}</label>
+                    <label class="col-25 input-label-desc" ng-hide="data.IsMetric">{{$parent.strings.GSSI_Pounds}}</label>
+                </div>
+                <div class="row">
+                    <label class="col-75 item item-input item-floating-label">
+                        <span class="input-label">{{$parent.strings.GSSI_TimeSpent}}</span>
+                        <label class="input-floating-label-print">{{model.TimeSpent}}</label>
+                        <input type="number" min="1" max="600" placeholder="{{$parent.strings.GSSI_TimeSpent}}" class="input-label-number" ng-model="model.TimeSpent" ng-change="calculate()" inputmode="numeric" pattern="[0-9]*" ng-focus="checkTimeSpentZeroValue()" ng-model-options="{updateOn: 'default blur', debounce: {default: 1000, blur: 0} }">
+                    </label>
+                    <label class="col-25 input-label-desc">{{$parent.strings.GSSI_Minutes}}</label>
+                </div>
+                <div class="row">
+                    <label class="col-75 item item-input item-floating-label">
+                        <span class="input-label">{{$parent.strings.GSSI_AvgPaceRun}}</span>
+                        <input type="text" class="hidden" placeholder="0:00" ng-model="model.AvgPaceValue">
+                        <label class="input-fake input-label-number" ion-datetime-picker time ng-model="model.AvgPaceValue" ng-change="avgPaceValueChanged(model.AvgPaceValue)" style="padding-right: 20px;">
+                            {{model.AvgPaceValue| date: "H:mm"}}
+                        </label>
+                    </label>
+                    <label class="col-25 input-label-desc" ng-show="data.IsMetric">{{$parent.strings.GSSI_MinKm}}</label>
+                    <label class="col-25 input-label-desc" ng-hide="data.IsMetric">{{$parent.strings.GSSI_MinMile}}</label>
+                </div>
+                <label class="item item-select">
+                    <span class="input-label">{{$parent.strings.GSSI_ActiveLevel}}</span>
+                    <label class="select-label-print">{{model.ActiveLevelSelected.Text}}</label>
+                    <select ng-model="model.ActiveLevelSelected" ng-options="y.Text for (x, y) in data.ActiveLevels" ng-change="calculate()">
+                        <option value="" disabled>{{$parent.strings.GSSI_Select}}</option>
+                    </select>
+                </label>
+            </form>
 
-        <ion-list class="nutrition-calculator">
-            <ion-item class="item-divider color-orange">{{$parent.strings.GSSI_Results}}</ion-item>
-            <ion-item class="item-divider small">{{$parent.strings.GSSI_BurningCalories}}</ion-item>
-            <div class="item item-body">
-                <p class="result-item color-green">
-                    <strong>{{results.CaloriesBurned.WithoutRunning}}</strong>{{$parent.strings.GSSI_WithoutRunning}}
-                </p>
-                <p class="result-item color-green">
-                    <strong>{{results.CaloriesBurned.FromRunning}}</strong>{{$parent.strings.GSSI_FromRunning}}
-                </p>
-                <p class="result-item color-green">
-                    <strong>{{results.CaloriesBurned.Total}}</strong>{{$parent.strings.GSSI_TotalDay}}
-                </p>
-            </div>
-            <ion-item class="item-divider small">{{$parent.strings.GSSI_RecommendedDiet}}</ion-item>
-            <div class="item item-body">
-                <p class="result-item color-green">
-                    <strong>{{results.RunnersDiet.Carbohydrates}}</strong>{{$parent.strings.GSSI_GramsCarbo}}
-                </p>
-                <p class="result-item color-green">
-                    <strong>{{results.RunnersDiet.Fat}}</strong>{{$parent.strings.GSSI_GramsFat}}
-                </p>
-                <p class="result-item color-green">
-                    <strong>{{results.RunnersDiet.Protein}}</strong>{{$parent.strings.GSSI_GramsProtein}}
-                </p>
-            </div>
-        </ion-list>
-        <div style="height: 10px">
-
+            <ion-list class="nutrition-calculator">
+                <ion-item class="item-divider color-orange">{{$parent.strings.GSSI_Results}}</ion-item>
+                <ion-item class="item-divider small">{{$parent.strings.GSSI_BurningCalories}}</ion-item>
+                <div class="item item-body">
+                    <p class="result-item color-green">
+                        <strong>{{results.CaloriesBurned.WithoutRunning}}</strong>{{$parent.strings.GSSI_WithoutRunning}}
+                    </p>
+                    <p class="result-item color-green">
+                        <strong>{{results.CaloriesBurned.FromRunning}}</strong>{{$parent.strings.GSSI_FromRunning}}
+                    </p>
+                    <p class="result-item color-green">
+                        <strong>{{results.CaloriesBurned.Total}}</strong>{{$parent.strings.GSSI_TotalDay}}
+                    </p>
+                </div>
+                <ion-item class="item-divider small">{{$parent.strings.GSSI_RecommendedDiet}}</ion-item>
+                <div class="item item-body">
+                    <p class="result-item color-green">
+                        <strong>{{results.RunnersDiet.Carbohydrates}}</strong>{{$parent.strings.GSSI_GramsCarbo}}
+                    </p>
+                    <p class="result-item color-green">
+                        <strong>{{results.RunnersDiet.Fat}}</strong>{{$parent.strings.GSSI_GramsFat}}
+                    </p>
+                    <p class="result-item color-green">
+                        <strong>{{results.RunnersDiet.Protein}}</strong>{{$parent.strings.GSSI_GramsProtein}}
+                    </p>
+                </div>
+            </ion-list>
         </div>
     </ion-content>
 </ion-view>
