--- a/SmartMarathon.IonicApp/www/templates/smartMarathon.html
+++ b/SmartMarathon.IonicApp/www/templates/smartMarathon.html
@@ -57,68 +57,137 @@
                 <select ng-model="model.Event" ng-options="y.Text for (x, y) in data.Events" ng-change="loadSplits()"></select>
             </label>
         </div>
-        <div class="kilometer-list">
-            <div class="row kilometer-header">
-                <div class="col col-20">
-                    <label ng-show="data.IsMetric">{{$parent.strings.SM_Km}}</label>
-                    <label ng-hide="data.IsMetric">{{$parent.strings.SM_Mile}}</label>
-                </div>
-                <div class="col col-40">
-                    <label>{{$parent.strings.SM_Altimetry}}</label>
-                </div>
-                <div class="col col-20">
-                    <label>{{$parent.strings.SM_Pace}}</label>
-                </div>
-                <div class="col col-20">
-                    <label>{{$parent.strings.SM_Time}}</label>
-                </div>
-            </div>
-            <div class="row kilometer-body" ng-repeat="split in model.Splits.Kilometers" ng-show="data.IsMetric">
-                <div class="col col-20">
-                    <label>
-                        {{split.Split}}
-                    </label>
-                </div>
-                <div class="col col-40 altimetry">
-                    <i class="ion-arrow-graph-down-right altimetry print" ng-if="split.Category == -1"></i>
-                    <i class="ion-minus altimetry print" ng-if="split.Category == 0"></i>
-                    <i class="ion-arrow-graph-up-right altimetry print" ng-if="split.Category == 1"></i>
-                    <div class="item range">
-                        <i class="ion-arrow-graph-down-right"></i>
-                        <input type="range" ng-model="split.Category" value="{{split.Category}}" min="-1" max="1" ng-change="refresh()">
-                        <i class="ion-arrow-graph-up-right"></i>
+        <div class="grids-parent">
+            <div class="grids-left">
+                <div class="kilometer-list">
+                    <div class="row kilometer-header">
+                        <div class="col col-20">
+                            <label ng-show="data.IsMetric">{{$parent.strings.SM_Km}}</label>
+                            <label ng-hide="data.IsMetric">{{$parent.strings.SM_Mile}}</label>
+                        </div>
+                        <div class="col col-40">
+                            <label>{{$parent.strings.SM_Altimetry}}</label>
+                        </div>
+                        <div class="col col-20">
+                            <label>{{$parent.strings.SM_Pace}}</label>
+                        </div>
+                        <div class="col col-20">
+                            <label>{{$parent.strings.SM_Time}}</label>
+                        </div>
+                    </div>
+                    <div class="row kilometer-body grids-left-row" ng-repeat="split in model.Splits.Kilometers" ng-show="data.IsMetric">
+                        <div class="col col-20">
+                            <label>
+                                {{split.Split}}
+                            </label>
+                        </div>
+                        <div class="col col-40 altimetry">
+                            <i class="ion-arrow-graph-down-right altimetry print" ng-if="split.Category == -1"></i>
+                            <i class="ion-minus altimetry print" ng-if="split.Category == 0"></i>
+                            <i class="ion-arrow-graph-up-right altimetry print" ng-if="split.Category == 1"></i>
+                            <div class="item range">
+                                <i class="ion-arrow-graph-down-right"></i>
+                                <input type="range" ng-model="split.Category" value="{{split.Category}}" min="-1" max="1" ng-change="refresh()">
+                                <i class="ion-arrow-graph-up-right"></i>
+                            </div>
+                        </div>
+                        <div class="col col-20">
+                            <label ng-bind="displayTime(split.Pace)"></label>
+                        </div>
+                        <div class="col col-20">
+                            <label ng-bind="displayTime(split.Time)"></label>
+                        </div>
+                    </div>
+                    <div class="row kilometer-body grids-left-row" ng-repeat="split in model.Splits.Miles" ng-hide="data.IsMetric">
+                        <div class="col col-20">
+                            <label>
+                                {{split.Split}}
+                            </label>
+                        </div>
+                        <div class="col col-40 altimetry">
+                            <i class="ion-arrow-graph-down-right altimetry print" ng-if="split.Category == -1"></i>
+                            <i class="ion-minus altimetry print" ng-if="split.Category == 0"></i>
+                            <i class="ion-arrow-graph-up-right altimetry print" ng-if="split.Category == 1"></i>
+                            <div class="item range">
+                                <i class="ion-arrow-graph-down-right"></i>
+                                <input type="range" ng-model="split.Category" value="{{split.Category}}" min="-1" max="1" ng-change="refresh()">
+                                <i class="ion-arrow-graph-up-right"></i>
+                            </div>
+                        </div>
+                        <div class="col col-20">
+                            <label ng-bind="displayTime(split.Pace)"></label>
+                        </div>
+                        <div class="col col-20">
+                            <label ng-bind="displayTime(split.Time)"></label>
+                        </div>
                     </div>
                 </div>
-                <div class="col col-20">
-                    <label ng-bind="displayTime(split.Pace)"></label>
-                </div>
-                <div class="col col-20">
-                    <label ng-bind="displayTime(split.Time)"></label>
-                </div>
             </div>
-            <div class="row kilometer-body" ng-repeat="split in model.Splits.Miles" ng-hide="data.IsMetric">
-                <div class="col col-20">
-                    <label>
-                        {{split.Split}}
-                    </label>
-                </div>
-                <div class="col col-40 altimetry">
-                    <i class="ion-arrow-graph-down-right altimetry print" ng-if="split.Category == -1"></i>
-                    <i class="ion-minus altimetry print" ng-if="split.Category == 0"></i>
-                    <i class="ion-arrow-graph-up-right altimetry print" ng-if="split.Category == 1"></i>
-                    <div class="item range">
-                        <i class="ion-arrow-graph-down-right"></i>
-                        <input type="range" ng-model="split.Category" value="{{split.Category}}" min="-1" max="1" ng-change="refresh()">
-                        <i class="ion-arrow-graph-up-right"></i>
+            <div class="grids-right print">
+                <div class="kilometer-list">
+                    <div class="row kilometer-header">
+                        <div class="col col-20">
+                            <label ng-show="data.IsMetric">{{$parent.strings.SM_Km}}</label>
+                            <label ng-hide="data.IsMetric">{{$parent.strings.SM_Mile}}</label>
+                        </div>
+                        <div class="col col-40">
+                            <label>{{$parent.strings.SM_Altimetry}}</label>
+                        </div>
+                        <div class="col col-20">
+                            <label>{{$parent.strings.SM_Pace}}</label>
+                        </div>
+                        <div class="col col-20">
+                            <label>{{$parent.strings.SM_Time}}</label>
+                        </div>
+                    </div>
+                    <div class="row kilometer-body grids-right-row" ng-repeat="split in model.Splits.Kilometers" ng-show="data.IsMetric">
+                        <div class="col col-20">
+                            <label>
+                                {{split.Split}}
+                            </label>
+                        </div>
+                        <div class="col col-40 altimetry">
+                            <i class="ion-arrow-graph-down-right altimetry print" ng-if="split.Category == -1"></i>
+                            <i class="ion-minus altimetry print" ng-if="split.Category == 0"></i>
+                            <i class="ion-arrow-graph-up-right altimetry print" ng-if="split.Category == 1"></i>
+                            <div class="item range">
+                                <i class="ion-arrow-graph-down-right"></i>
+                                <input type="range" ng-model="split.Category" value="{{split.Category}}" min="-1" max="1" ng-change="refresh()">
+                                <i class="ion-arrow-graph-up-right"></i>
+                            </div>
+                        </div>
+                        <div class="col col-20">
+                            <label ng-bind="displayTime(split.Pace)"></label>
+                        </div>
+                        <div class="col col-20">
+                            <label ng-bind="displayTime(split.Time)"></label>
+                        </div>
+                    </div>
+                    <div class="row kilometer-body grids-right-row" ng-repeat="split in model.Splits.Miles" ng-hide="data.IsMetric">
+                        <div class="col col-20">
+                            <label>
+                                {{split.Split}}
+                            </label>
+                        </div>
+                        <div class="col col-40 altimetry">
+                            <i class="ion-arrow-graph-down-right altimetry print" ng-if="split.Category == -1"></i>
+                            <i class="ion-minus altimetry print" ng-if="split.Category == 0"></i>
+                            <i class="ion-arrow-graph-up-right altimetry print" ng-if="split.Category == 1"></i>
+                            <div class="item range">
+                                <i class="ion-arrow-graph-down-right"></i>
+                                <input type="range" ng-model="split.Category" value="{{split.Category}}" min="-1" max="1" ng-change="refresh()">
+                                <i class="ion-arrow-graph-up-right"></i>
+                            </div>
+                        </div>
+                        <div class="col col-20">
+                            <label ng-bind="displayTime(split.Pace)"></label>
+                        </div>
+                        <div class="col col-20">
+                            <label ng-bind="displayTime(split.Time)"></label>
+                        </div>
                     </div>
                 </div>
-                <div class="col col-20">
-                    <label ng-bind="displayTime(split.Pace)"></label>
-                </div>
-                <div class="col col-20">
-                    <label ng-bind="displayTime(split.Time)"></label>
-                </div>
             </div>
-        </div>
+        </div>        
     </ion-content>
 </ion-view>
